<?xml version="1.0" encoding="utf-8"?>
<com.livestreaming.common.custom.MyRelativeLayout5 xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_marginHorizontal="2dp"
    android:layout_marginBottom="4dp"
    android:layoutDirection="ltr">

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/cover"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        app:riv_corner_radius="8dp" />

    <com.livestreaming.common.custom.RatioRoundImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_alignParentBottom="true"
        android:src="@mipmap/bg_main_item_bottom"
        app:ri_ratio="0.5"
        app:riv_corner_radius_bottom_left="5dp"
        app:riv_corner_radius_bottom_right="5dp" />

    <LinearLayout
        android:id="@+id/pk_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ll"
        android:background="@drawable/login_btn"
        android:backgroundTint="#8B494949"
        android:gravity="center_vertical"
        android:paddingHorizontal="8dp"
        android:paddingVertical="3dp"
        android:visibility="gone"
        tools:visibility="invisible">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/iv_live" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_alignParentStart="true"
            android:drawablePadding="2dp"
            android:gravity="center"
            android:text="@string/team_pk"
            android:textColor="@color/white"

            android:textSize="10sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/rooms_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ll"
        android:background="@drawable/login_btn"
        android:backgroundTint="#8B494949"
        android:gravity="center_vertical"
        android:paddingHorizontal="8dp"
        android:paddingVertical="3dp"
        android:visibility="gone"
        tools:visibility="visible">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/iv_voice" />

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:drawablePadding="2dp"
            android:gravity="center_vertical"
            android:paddingHorizontal="8dp"
            android:text="@string/team_party"
            android:textColor="@color/white"

            android:textSize="10sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/live_host_gests_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ll"
        android:background="@drawable/login_btn"
        android:backgroundTint="#8B494949"
        android:gravity="center_vertical"
        android:paddingHorizontal="8dp"
        android:paddingVertical="3dp"
        android:visibility="gone"
        tools:visibility="invisible">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/iv_live" />

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="2dp"
            android:gravity="center_vertical"
            android:paddingHorizontal="8dp"
            android:text="@string/team_host"
            android:textColor="@color/white"

            android:textSize="10sp" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="5dp"
            android:ellipsize="end"
            android:gravity="start"
            android:paddingHorizontal="12dp"
            android:singleLine="true"
            android:textAlignment="textStart"
            android:textColor="#fff"
            android:textSize="15sp"
            android:textStyle="bold"
            tools:text="eeeeeeeeeeeeeeeeeeeeeeeee" />

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="12dp"
            android:ellipsize="end"
            android:gravity="start"
            android:maxLines="2"
            android:textColor="#fff"
            android:textSize="14sp"
            android:textStyle="bold"
            tools:text="asdddddddddddddddddddddddd" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="18dp">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/tv_type"
                android:layout_width="24dp"
                android:layout_height="match_parent"
                android:background="#4F4C4C4C"
                app:lottie_autoPlay="true"
                app:lottie_fileName="lottie_wave.json"
                app:lottie_loop="true" />

            <TextView
                android:id="@+id/tv_likes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_likes"
                android:drawableStart="@drawable/ic_like_hand"
                android:paddingHorizontal="8dp"

                android:textColor="@color/white"
                android:textSize="14sp"
                tools:text="12" />


        </LinearLayout>

        <TextView
            android:id="@+id/trend_id"
            android:layout_width="wrap_content"
            android:layout_height="18dp"
            android:layout_gravity="end"
            android:background="@drawable/bg_trend_home_item"
            android:drawableStart="@drawable/ic_fire"
            android:gravity="center_vertical"
            android:paddingHorizontal="4dp"
            android:text="Trend No.1"
            android:textColor="@color/global"
            android:textSize="10sp"
            android:textStyle="bold"
            android:visibility="gone"
            tools:visibility="visible" />
    </FrameLayout>

    <ImageView
        android:id="@+id/flag_img"
        android:layout_width="35dp"
        android:layout_height="20dp"
        android:layout_below="@+id/frameLayout"
        android:layout_alignParentStart="true"
        android:layout_marginVertical="4dp"
        android:src="@drawable/tip_enter_shop" />


</com.livestreaming.common.custom.MyRelativeLayout5>