<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/iscreen"
    xmlns:tools="http://schemas.android.com/tools">


    <LinearLayout
        android:id="@+id/g_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:gravity="center_horizontal"
        android:background="@drawable/login_btn"
        android:backgroundTint="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="16dp"
        android:paddingVertical="4dp">

        <ImageView
            android:id="@+id/iv_gmail"
            android:layout_width="35dp"
            android:layout_height="40dp"
            android:layout_gravity="start"
            android:layout_marginStart="16dp"
            android:padding="4dp"
            android:src="@drawable/google_ic" />

        <TextView
            android:id="@+id/tv_google_signin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="4dp"
            android:singleLine="true"
            android:text="@string/connect_with_google"
            android:textColor="#682485"
            android:textSize="16sp"
            android:textStyle="bold">

        </TextView>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/snap_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="12dp"
        android:gravity="center_horizontal"
        android:visibility="gone"
        android:background="@drawable/login_btn"
        android:backgroundTint="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/g_container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="16dp"
        android:paddingVertical="4dp">

        <ImageView
            android:id="@+id/iv_snap"
            android:layout_width="35dp"
            android:layout_height="40dp"
            android:layout_gravity="start"
            android:layout_marginStart="16dp"
            android:padding="4dp"
            android:src="@drawable/ic_snapchat" />

        <TextView
            android:id="@+id/tv_snap_signin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="4dp"
            android:singleLine="true"
            android:text="@string/connect_with_SnapChat"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold">

        </TextView>
    </LinearLayout>

    <ImageView
        android:id="@+id/show_more"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/snap_container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="36dp"
        android:src="@drawable/arrow_down"
        app:tint="@color/white"

        />
    <LinearLayout
        android:id="@+id/show_more_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/show_more"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="16dp"
        >
    <LinearLayout
        android:id="@+id/or_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/show_more"
        android:layout_marginTop="4dp"
        android:weightSum="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="16dp"
        >
        <View
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_weight="0.45"
            android:layout_gravity="center_vertical"
            android:background="@color/white"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/more_login_methods"
            android:textColor="@color/white"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="14sp"
            android:layout_weight="0.1"
            />
        <View
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_weight="0.45"
            android:layout_gravity="center_vertical"
            android:background="@color/white"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/layout_other"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:weightSum="2"
        android:layout_gravity="center_horizontal"
        app:layout_constraintTop_toBottomOf="@+id/or_layout"
        android:layout_marginTop="16dp"
        >
        <ImageView
            android:id="@+id/go_to_login"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginHorizontal="12dp"
            android:src="@mipmap/icon_reg_phone"
            android:background="@drawable/bg_rounded"
            android:padding="8dp"
            />

        <ImageView
            android:id="@+id/go_to_register"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/ic_user"
            android:background="@drawable/bg_rounded"
            android:padding="8dp"
            android:layout_marginHorizontal="12dp"
            />

    </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/group_login_tip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="64dp"
        android:gravity="center_vertical"
        android:layoutDirection="ltr"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/show_more_layout">

        <ImageView
            android:id="@+id/btn_login_check"
            android:layout_width="24dp"
            android:layout_height="30dp"
            android:paddingLeft="5dp"
            android:paddingTop="8dp"
            android:paddingRight="5dp"
            android:paddingBottom="8dp"
            android:src="@mipmap/bg_login_check_0" />

        <TextView
            android:id="@+id/login_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="12dp"
            tools:text="الشروط والاحكام" />

    </LinearLayout>
    <ProgressBar
        android:id="@+id/loader"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="132dp"
        android:visibility="gone" />

</androidx.constraintlayout.widget.ConstraintLayout>